--- a/prince/base/locale/en-us/dialogs/msiEditorTableProperties.dtd
+++ b/prince/base/locale/en-us/dialogs/msiEditorTableProperties.dtd
@@ -42,6 +42,7 @@
 <!ENTITY tableTab.label                   "Table">
 <!ENTITY cellsTab.label                   "Cells">
 <!ENTITY linesTab.label                   "Lines">
+<!ENTITY quicklyTab.label                 "Quickly">
 
 <!-- !ENTITY tableRows.label                  "Rows:">
 <!ENTITY tableRows.accesskey              "R">
