Part of problem with intertext

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -107,7 +107,7 @@
 \MSITextElement[upright]{textup}
 \MSITextElement[medium]{textmd}
 
-\MSITextElement{intertext}
+%\MSITextElement{intertext}
 
 
 
