--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -437,6 +437,7 @@
 \MSIEqnarrayLikeEnvironment{eqnarray}
 \MSIEqnarrayLikeEnvironment{eqnarray*}
 \MSIEqnarrayLikeEnvironment{multline}
+\MSIEqnarrayLikeEnvironment{multline*}
 \MSIEqnarrayLikeEnvironment{alignat}
 \MSIEqnarrayLikeEnvironment{alignat*}
 \MSIEqnarrayLikeEnvironment{align}
