A merge is making me commit this file even though I wasn't ready to yet, but since just adding some items used only by svjour3.cls, seems harmless enough since I was going to update at some point.

--- a/prince/base/locale/en-us/latex.dtd
+++ b/prince/base/locale/en-us/latex.dtd
@@ -16,3 +16,5 @@
 <!ENTITY  marker        "Marker: ">
 <!ENTITY  xref          "Cross ref: ">
 <!ENTITY  index         "Index: ">
+<!-- These are localizable entities for names that appear in prince/base/content/bindings/svjour3.xml -->
+<!ENTITY  subtitle      "Subtitle">
