--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -93,7 +93,7 @@
    \catcode`\&=4
 
 }
-\def\@@usepackage{\def\&{&}\@fileswithoptions\@pkgextension}
+\def\@@usepackage{\@fileswithoptions\@pkgextension}
 
 
 \def\RequirePackage{%
