Fix rest of 3109

--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -73,7 +73,6 @@
 %% \usepackage and \RequirePackage
 
 \def\usepackage{%
-  \catcode`\&=\active
   \@ifnextchar[{\@usepackagea}{\@usepackageb}}
 
 \def\@usepackagea[#1]#2{%
@@ -81,8 +80,6 @@
    \advance\msi@output by 1\relax
    \@@usepackage[#1]{#2}%
    \advance\msi@output by -1\relax
-   \catcode`\&=4
-
 }
 
 \def\@usepackageb#1{%
@@ -90,8 +87,6 @@
    \advance\msi@output by 1\relax
    \@@usepackage{#1}%
    \advance\msi@output by -1\relax
-   \catcode`\&=4
-
 }
 \def\@@usepackage{\@fileswithoptions\@pkgextension}
 
@@ -6704,7 +6699,7 @@
 
 \begingroup
    \catcode`\&=13%
-   \gdef&{\ifmmode\char`\&\else\char`\&amp;\fi}
+   \gdef&{\ifmmode\char`\&\else&\fi}
 \endgroup
   
 \def\msihyperref#1#2#3{%
