Fix 3159 (but see comment in bug report)

--- a/filters/ptprince/ptdata/msi-setspace.sty
+++ b/filters/ptprince/ptdata/msi-setspace.sty
@@ -5,4 +5,7 @@
 \MSITeXButton{singlespacing}
 
 
-% Add spacing environment ?
+% spacing environment ?
+
+\def\msi@begin@spacing#1{\msitag{<environment type="spacing" param="#1">}}
+\def\msi@end@spacing{\msitag{</environment>}}
