Work on table, wrapfig, etc

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -2127,7 +2127,7 @@
 
 
 \def\msi@begin@figureA[#1]{%
-   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f" placeLocation="#1" >}%
+   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f" ltxfloat="#1" >}%
 }
 
 \def\msi@begin@figureB{%
@@ -2145,7 +2145,7 @@
 
 
 \def\msi@begin@tableA[#1]{%
-   \msiopentag{msiframe}{<msiframe frametype="table" pos="float" placeLocation="#1">}%
+   \msiopentag{msiframe}{<msiframe frametype="table" pos="float" ltxfloat="#1">}%
 }
 
 \def\msi@begin@tableB{%
