Removed references to matrices from property menus. Renamed old EdInsertTable.xul to msiEdTableProps.xul. Renamed old msiEdTableProps.xul to msiEdMatrixProps.xul to better reflect what they are.

--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -672,8 +672,8 @@
 <!ENTITY matrixsplitcell.accesskey "c">
 <!ENTITY convertToMatrix.label "Create Matrix from Selection">
 <!ENTITY converttomatrix.accesskey "r">
-<!ENTITY matrixProperties.label "Matrix Properties...">
-<!ENTITY matrixProperties.accesskey "o">
+<!-- ENTITY matrixProperties.label "Matrix Properties..." -->
+<!-- ENTITY matrixProperties.accesskey "o" -->
 
 <!-- Tools menu -->
 <!ENTITY toolsmenu.label "Tools">
