Working on the UI to present when the program is not licensed. The rule is that the user cannot save a document or print a modified document if the program is not licensed. This is pretty much working, but the disabling of some of the menu items is not correct, and sometimes too many error messages pop up. Also, there must be a gate down in the C++ code that stops execution when not licensed; this JS work is for the UI only. Someone can easily get around it, but then all they will have is a broken program with a broken UI. You can set the expiration time for the license by searching for 'license' in the advanced preferences. Obviously, this will disappear in the final product.

--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -51,6 +51,7 @@
 <!ENTITY publishAsCmd.label "Publish As...">
 <!ENTITY publishas.accesskey "b">
 <!ENTITY exportToTextCmd.label "Export to Text...">
+<!ENTITY exportToTexCmd.label "Export to TeX...">
 <!ENTITY fileexporttotext.accesskey "T">
 <!ENTITY saveAndChangeEncodingCmd.label "Save and Change Character Encoding">
 <!ENTITY filesaveandchangeencoding.accesskey "h">
