Improve import of boxed characters.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1852,7 +1852,7 @@
               \msitag{\msipassthru}{\msihmode #1}%
               \msitag{\msipassthru{</menclose>}}%
             \else
-              \msiopentag{fbox}{<smallbox>}#1\msiclosetag{fbox}{</smallbox>}%
+              \msihmode\msiopentag{fbox}{<smallbox>}#1\msiclosetag{fbox}{</smallbox>}%
             \fi}
 
 \def\frame#1{\ifmmode
@@ -1861,7 +1861,7 @@
               \msitag{\msipassthru}{\msihmode #1}%
               \msitag{\msipassthru{</menclose>}}%
              \else
-               \msiopentag{frame}{<smallbox>}#1\msiclosetag{frame}{</smallbox>}%
+               \msihmode\msiopentag{frame}{<smallbox>}#1\msiclosetag{frame}{</smallbox>}%
              \fi}
 
 
