Final (?) touches on find/replace dialog

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -295,3 +295,6 @@ InsertMatrixColumnsAccessKey=l
 commandfailed=Command failure
 moreinfo=More info
 moredetails=Failure details
+#
+Replaced=Replaced
+occurrences=occurrences
