Added a check to keep from having two editors (i.e., windows) open on the same file.

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -290,6 +290,7 @@ InsertMatrixRows=Insert Matrix Rows
 InsertMatrixRowsAccessKey=w
 InsertMatrixColumns=Insert Matrix Columns
 InsertMatrixColumnsAccessKey=l
+OnlyOneEditorPerFile=Cannot have two editors editing a single document
 
 # finalThrow
 commandfailed=Command failure
