--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1960,10 +1960,23 @@
 \def\@footnoteb{%
     \bgroup
     \def\par{\msiclosetag{bodyText}{</bodyText>}\msiopentag{bodyText}{<bodyText>}}
-    \aftergroup\@footnotec
-}
+    \aftergroup\@footnot
+\def\@footnoteb{%
+    \msi@br
+    \msiopentag{notewrapper}{<notewrapper type='footnote'>}
+    \msiopentag{note}{<note type="footnote" hide='false'>}%
+    \msiopentag{bodyText}{<bodyText>}%
+    % Next couple lines read the brace following \footnote and then does \footnoteb
+    \afterassignment\@footnotec
+    \let\junk}
 
 \def\@footnotec{%
+    \bgroup
+    \def\par{\msiclosetag{bodyText}{</bodyText>}\msiopentag{bodyText}{<bodyText>}}
+    \aftergroup\@footnoted
+}
+
+\def\@footnoted{%
     \msiclosetag{bodyText}{</bodyText>}%
     \msiclosetag{note}{</note>}%
     \@end@notewrapper}
