--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1783,7 +1783,7 @@
        \expandafter\string\csname #2\endcsname%
      \else
        \msihmode\msiopentag{#1}{<#1>}%
-       \def\endelem{\msiclosetag{#1}{</#1>}}
+       \def\endelem{\msiclosetag{#1}{</#1>}}%
        \bgroup
           \aftergroup\endelem
           \let\@next\@gobbleit
