Fix comment #2 of 3251

--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -1465,8 +1465,8 @@
 
 
 \def\newlength#1{\newskip#1}
-\def\setlength#1#2{}
-\def\addtolength#1#2{}
+%\def\setlength#1#2{}
+%\def\addtolength#1#2{}
 
 \msi@pass@newline{\@settodim}
 \msi@pass@newline{\settoheight}
